--- a/Clinic.Backend/Auth/Auth.Api/Views/Auth/SignIn.cshtml
+++ b/Clinic.Backend/Auth/Auth.Api/Views/Auth/SignIn.cshtml
@@ -1,10 +1,10 @@
-﻿@model Auth.Api.Models.Auth.SignUpModel
+﻿@model Auth.Api.Models.Auth.SignInModel
 
-<h2> Sign Up</h2>
+<h2> Sign In</h2>
 <hr/>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="SignUp">
+        <form asp-action="SignIn">
             <partial name="_ValidationSummary"/>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
@@ -17,12 +17,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConfirmPassword" class="control-label"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Sign Up" class="btn btn-primary"/>
+                <input type="submit" value="Sign In" class="btn btn-primary"/>
             </div>
         </form>
     </div>
