--- a/Clinic.Backend/Auth/Auth.Api/Views/Shared/_AuthPartial.cshtml
+++ b/Clinic.Backend/Auth/Auth.Api/Views/Shared/_AuthPartial.cshtml
@@ -1,7 +1,13 @@
 ﻿<ul class="navbar-nav">
     <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Auth" asp-action="SignUp">
-                Sign Up
-            </a>
-        </li>
+        <a class="nav-link text-dark" asp-controller="Auth" asp-action="SignUp">
+            Sign Up
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-controller="Auth" asp-action="SignIn">
+            Sign In
+        </a>
+    </li>
+    
 </ul>
