create patient profile

--- a/Clinic.Frontend/src/app/shared/components/confirmation/confirmation.component.css
+++ b/Clinic.Frontend/src/app/shared/components/confirmation/confirmation.component.css
@@ -1,4 +1,5 @@
 .container {
+  width: 400px;
   min-width: 220px;
 }
 
@@ -8,18 +9,16 @@ h2 {
 }
 
 mat-dialog-actions {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   position: relative;
   margin-top: 10px;
 }
 
-button:first-child {
-  display: inline-block;
-  position: absolute;
-  left: 0;
-}
-
-button:last-child {
-  display: inline-block;
-  position: absolute;
-  right: 0;
+button
+{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
