--- a/Clinic.Frontend/src/app/core/components/navbar/navbar.component.html
+++ b/Clinic.Frontend/src/app/core/components/navbar/navbar.component.html
@@ -6,18 +6,15 @@
     <button mat-button routerLink="/contact">Contact</button>
   </div>
   <div class="header__sign-in">
-    <ng-container *ngIf="(authService.currentUser$ | async) as user">
-      <p>{{user.email}}</p>
-    </ng-container>
     <button mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>person</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <ng-container *ngIf="!(authService.currentUser$ | async)">
+      <ng-container *ngIf="!authService.isAuthenticated()">
         <button mat-menu-item routerLink="auth/sign-in">Sign In</button>
         <button mat-menu-item routerLink="auth/sign-up">Sign Up</button>
       </ng-container>
-      <ng-container *ngIf="(authService.currentUser$ | async)">
+      <ng-container *ngIf="authService.isAuthenticated()">
         <button mat-menu-item (click)="logout()">Logout</button>
       </ng-container>
     </mat-menu>
